--- a/example/vtapi.conf
+++ b/example/vtapi.conf
@@ -8,7 +8,7 @@ user="mjackson"
 #password=""
 
 # Specify your datasets location (include the trailing slash)
-location="/mnt/mydata/"
+location="/mnt/data/"
 
 
 ############# Connection #############
