--- a/doc/MAINPAGE.txt.in
+++ b/doc/MAINPAGE.txt.in
@@ -7,7 +7,7 @@
  * which was created to unify and accelerate the intelligent vision
  * applications development.
  *
- * @bold{%VTApi 1.5} is based on PostgreSQL database, PostGIS and OpenCV created within
+ * @bold{%VTApi @VTAPI_API_VERSION@} is based on PostgreSQL database, PostGIS and OpenCV created within
  * the Ministry of interior VideoTerror (VT) research project. The main objective
  * of the VT project is to define, explore and create a prototype of a system
  * warehousing image and video accomplished with computer
@@ -122,33 +122,16 @@
  *
  * See <a href="./examples.html">Examples</a> for more details on configuration and code samples.
  *
- * @copyright Brno University of Technology &copy; 2011 &ndash; 2012
+ * @copyright Brno University of Technology &copy; 2011 &ndash; 2015
  *
  * %VTApi is distributed under BUT OPEN SOURCE LICENCE (Version 1).
  * This licence agreement provides in essentials the same extent of rights as the terms of GNU GPL version 2 and Software fulfils the requirements of the Open Source software.
  *
- * @authors
- * Petr Chmelar, chmelarp (at) fit.vutbr.cz
- * Vojtech Froml, xfroml00 (at) stud.fit.vutbr.cz
- * Tomas Volf, ivolf (at) fit.vutbr.cz
+ * @author Petr Chmelar, chmelarp (at) fit.vutbr.cz
+ * @author Vojtech Froml, xfroml00 (at) stud.fit.vutbr.cz
+ * @author Tomas Volf, ivolf (at) fit.vutbr.cz
  *
- * @example vtapi.conf
+ * @example ../default.conf
  * This file shows an example configuration file for VTApi.
  */
  
-
-File structure:
- build
- dist
- doc
- include
- nbproject
- postgres
- pyi
- src
- Makefile
- README.txt
- vtapi.conf
- vtcli.cpp
-
-
