make (un)install - solved (un)installation of vtapi's header files

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 AUTOMAKE_OPTIONS = subdir-objects
 ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS} -I m4
 
-SUBDIRS = src
+SUBDIRS = src include
 if HAVE_DOXYGEN
   SUBDIRS += doc
 endif
@@ -14,7 +14,6 @@ vtcli_CFLAGS = $(PQ_CFLAGS) $(LIBLWGEOM_CFLAGS) $(GEOS_CFLAGS) $(OPENCV_CFLAGS) 
 vtcli_CXXFLAGS = $(PQ_CFLAGS) $(LIBLWGEOM_CFLAGS) $(GEOS_CFLAGS) $(OPENCV_CFLAGS) $(SQLITE_CFLAGS) $(LTDL_CFLAGS) $(READPROC_CFLAGS)
 #vtcli_LDFLAGS = -no-install -L$(abs_top_builddir)/src/.libs $(DEPS_LIBS) $(OPENCV_LIBS) $(SQLITE_LIBS) $(LIBPQTYPES_LIBS) $(PQ_LIBS) $(LIBLWGEOM_LIBS) $(GEOS_LIBS) $(LTDL_LIBS) $(READPROC_LIBS) -lvtapi
 vtcli_LDFLAGS = -no-install -L$(abs_top_builddir)/src/.libs $(DEPS_LIBS) -lvtapi -lopencv_core
-
 
 #LDADD = -lvtapi
 
