revision@doc in common, vtapi_config2.h deleted
- completed revision of doc in common/*.h (except of files which are not included to vtapi documentation (vtapi_misc.h & vtapi_settings.h)

- vtapi_config2.h was deleted due to obsoleteness (was not included to any other file and was an obsolete copy of vtapi_config.h, i consider)

--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -818,14 +818,14 @@ RECURSIVE              = YES
 # Note that relative paths are relative to the directory from which doxygen is
 # run.
 
-EXCLUDE                = ../include/common/vtapi_settings.h \
-                         ../include/common/vtapi_misc.h \
-                         ../src/vtapi_settings.cpp \
-                         ../include/vtcli.h \
+EXCLUDE                = ../include/common/vtapi_misc.h \
+                         ../include/common/vtapi_settings.h \
+                         ../include/postgis \
                          ../include/vtapi_libpq.h \
-                         ../include/vtapi_settings.h \
-                         ../src/vtapi_misc.c \
-                         ../include/postgis
+                         ../include/vtcli.h \
+                         ../src/vtapi_misc.cpp \
+                         ../src/vtapi_settings.cpp
+
 
 # The EXCLUDE_SYMLINKS tag can be used to select whether or not files or
 # directories that are symbolic links (a Unix file system feature) are excluded
