--- a/configure.ac
+++ b/configure.ac
@@ -45,28 +45,6 @@ LDFLAGS="${LDFLAGS} ${VTAPI_LDFLAGS}"
 
 
 ###############################################################################
-#####   Additions to autoheader (vtapi_autoconfig.h.in) file              #####
-###############################################################################
-AH_TOP([/**
- * @file
- * @brief   Variable configuration header depending on the parameters when the ./configure script is started
- *
- * @author   Petr Chmelar, chmelarp (at) fit.vutbr.cz
- * @author   Vojtech Froml, xfroml00 (at) stud.fit.vutbr.cz
- * @author   Tomas Volf, ivolf (at) fit.vutbr.cz
- * 
- * @licence   @ref licence "BUT OPEN SOURCE LICENCE (Version 1)"
- * 
- * @copyright   &copy; 2011 &ndash; 2015, Brno University of Technology
- */
-
-#ifndef VTAPI_AUTOCONFIG_H
-#define VTAPI_AUTOCONFIG_H 1
-])
-AH_BOTTOM([#endif /* VTAPI_AUTOCONFIG_H */])
-
-
-###############################################################################
 #####   Register configure arguments and variables                        #####
 ###############################################################################
 
@@ -496,6 +474,28 @@ else
 fi
 
 
+
+
+###############################################################################
+#####   Additions to autoheader (vtapi_autoconfig.h.in) file              #####
+###############################################################################
+AH_TOP([/**
+ * @file
+ * @brief   Variable configuration header depending on the parameters when the ./configure script is started
+ *
+ * @author   Petr Chmelar, chmelarp (at) fit.vutbr.cz
+ * @author   Vojtech Froml, xfroml00 (at) stud.fit.vutbr.cz
+ * @author   Tomas Volf, ivolf (at) fit.vutbr.cz
+ * 
+ * @licence   @ref licence "BUT OPEN SOURCE LICENCE (Version 1)"
+ * 
+ * @copyright   &copy; 2011 &ndash; 2015, Brno University of Technology
+ */
+
+#ifndef VTAPI_AUTOCONFIG_H
+#define VTAPI_AUTOCONFIG_H
+])
+AH_BOTTOM([#endif /* VTAPI_AUTOCONFIG_H */])
 
 
 ###############################################################################
