minor: better identification of target of additions

--- a/configure.ac
+++ b/configure.ac
@@ -477,7 +477,7 @@ fi
 
 
 ###############################################################################
-#####   Additions to autoheader (vtapi_autoconfig.h.in) file              #####
+#####   Additions to autoheader (vtapi_autoconfig.h) file                 #####
 ###############################################################################
 AH_TOP([/**
  * @file
