default config file changes

--- a/vtapi_default.conf
+++ b/vtapi_default.conf
@@ -28,7 +28,7 @@ dataset="demo_dataset"
 # example:
 # connection="sqlite:///mnt/vtapi_db"
 
-connection="postgresql://vidte@localhost:4321/vidte"
+connection="postgresql://user@localhost:4321/vidte"
 
 
 ############## Logging ##############
@@ -40,9 +40,7 @@ logfile=~/.vtapi/vtapi.log
 log_errors
 
 # Log warning messages (uncomment to enable)
-log_warnings
+#log_warnings
 
 # Log verbose debugging information (uncomment to enable)
-log_debug
-
-
+#log_debug
