fixed default config file

--- a/vtapi_default.conf
+++ b/vtapi_default.conf
@@ -4,13 +4,13 @@
 ############## Data location ##############
 
 # Folder containing your datasets
-datasets_dir="/mnt/vtapi_data"
+datasets_dir=/mnt/vtapi_data
 
 # Folder containing your VTApi module binaries
-modules_dir="/mnt/vtapi_modules"
+modules_dir=/mnt/vtapi_modules
 
 # Sets default dataset
-dataset="demo_dataset"
+dataset=demo_dataset
 
 ############# Connection #############
 
@@ -20,15 +20,15 @@ dataset="demo_dataset"
 # postgresql://[user[:password]@[netloc][:port][/dbname][?param1=value1$...]
 #
 # example:
-# connection="postgresql://mjackson:pass123@localhost:4321/mydb"
+# connection=postgresql://mjackson:pass123@localhost:4321/mydb
 
 #### SQLite ####
 # sqlite://[db_folder]
 #
 # example:
-# connection="sqlite:///mnt/vtapi_db"
+# connection=sqlite:///mnt/vtapi_db
 
-connection="postgresql://user@localhost:4321/vidte"
+connection=postgresql://user@localhost:4321/vidte
 
 
 ############## Logging ##############
