config + IPC tweaks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,9 +12,9 @@ set(VTAPI_MODULES_DIR "modules" CACHE STRING "where to install VTApi modules")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -DBOOST_DATE_TIME_NO_LIB")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DVTAPI_DEBUG")
 
-
-# find POCO libraries
+# POCO libraries
 find_library(PocoFoundation_LIBRARY PocoFoundation /usr/local/lib)
+find_library(PocoNet_LIBRARY PocoNet /usr/local/lib)
 find_library(PocoUtil_LIBRARY PocoUtil /usr/local/lib)
 find_library(PocoXML_LIBRARY PocoXML /usr/local/lib)
 
