--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,6 +13,7 @@ set_target_properties(vtapi PROPERTIES
 
 target_link_libraries(vtapi
     ${PocoFoundation_LIBRARY}
+    ${PocoNet_LIBRARY}
     ${PocoUtil_LIBRARY}
     ${OpenCV_LIBRARIES}
 )
