example config file

--- a/vtapi_example.conf
+++ b/vtapi_example.conf
@@ -34,7 +34,7 @@ connection=postgresql://user@localhost:4321/vidte
 ############## Logging ##############
 
 # Log file location (leave empty for standard output)
-logfile=~/.vtapi/vtapi.log
+logfile=~/vtapi.log
 
 # Log error messages (uncomment to enable)
 log_errors
